objects/DNBI_Credentials__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To provide the Credentials to connect to DNBI System</description>
    <fields>
        <fullName>DnB_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked will enable the DNBI functionality in the Account Triggers</description>
        <label>DnB Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <label>End Point</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>DNBI Credentials</label>
</CustomObject>